--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -9,12 +9,46 @@ p {
     margin-bottom: 1rem;
 }
 
+.navbar {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 2rem;
+    height: 3rem;
+    margin: 0 2rem 2rem 0;
+}
+
+.navItem {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    text-decoration: none;
+    color: black;
+}
+
+.navItem p {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+}
+
+.navItem i {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+
 body {
+    background-color: aliceblue;
+}
+
+.cardContainer {
     height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: aliceblue;
 }
 
 .card {
@@ -29,6 +63,7 @@ body {
     width: 100%;
     height: 40%;
     border-radius: 15px 15px 0 0;
+    overflow: hidden;
 }
 
 .cocktailName {
@@ -48,5 +83,44 @@ hr {
 }
 
 .ingredient {
+    text-align: center;
+}
+
+
+
+
+.allCardContainer {
+    margin: 0 10% 0 10%;
+    width: 80%;
+    display: grid;
+    gap: 2rem;
+    grid-auto-rows: 300px;
+    grid-template-columns: 23% 23% 23% 23%;
+}
+
+.allCard{
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.allCardSubmit{
+    padding: 0;
+    border: 0;
+    margin: 0;
+    background-color: aliceblue;
+}
+
+.allCardsImage {
+    border-radius: 15px;
+}
+
+
+
+
+
+
+footer {
     text-align: center;
 }
