--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,24 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cocktails</title>
+    <title>Cocktails - Random</title>
+    <script src="https://kit.fontawesome.com/4637d6af85.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
 
-    <div class="card">
-        <img src=<%= `${cocktail.strDrinkThumb}/preview` %> alt="" class="image">
-        <h2 class="cocktailName"> <%= cocktail.strDrink %> </h2>
-        <hr>
-        <div class="ingredientsContainer">
-            <% for(var i=0; i<15; i++) { %>
-                <% if(locals.ingredients[i] && locals.measures[i]) { %>
-                    <p class="ingredient"> <%= ` ${measures[i]} - ${ingredients[i]} ` %>  </p>
-                <% } %>
-            <% } %>
+    <%- include("./partials/navBar.ejs") %>
 
-        </div>
-    </div>
+    <div class="cardContainer">
+        <div class="card">
+            <img src=<%= `${cocktail.strDrinkThumb}/preview` %> alt="" class="image">
+            <h2 class="cocktailName"> <%= cocktail.strDrink %> </h2>
+            <hr>
+            <div class="ingredientsContainer">
+                <% for(var i=0; i<15; i++) { %>
+                    <% if(locals.ingredients[i]) { %>
+                        <p class="ingredient"> <%= ` ${measures[i]} - ${ingredients[i]} ` %>  </p>
+                    <% } %>
+                <% } %>
     
+            </div>
+        </div>
+
+    </div>
+        
 </body>
+
+<%- include("./partials/footer.ejs") %>
+
 </html>
