--- a/views/partials/navBar.ejs
+++ b/views/partials/navBar.ejs
@@ -1,10 +1,12 @@
-<div class="navbar">
-    <a class="navItem" href="/">
-        <i class="fa-solid fa-grip"></i>
-        <p class="navTitle">All</p>
-    </a>
-    <a class="navItem" href="/random">
-        <i class="fa-solid fa-shuffle"></i>
-        <p class="navTitle">Random</p>
-    </a>
+<div class="navbarContainer">
+    <div class="navbar">
+        <a class="navItem" href="/">
+            <i class="fa-solid fa-grip"></i>
+            <p class="navTitle">All</p>
+        </a>
+        <a class="navItem" href="/random">
+            <i class="fa-solid fa-shuffle"></i>
+            <p class="navTitle">Random</p>
+        </a>
+    </div>
 </div>
